crates/mdt_cli/tests/snapshots/snapshots__pad_blocks_rust_update_readme_md.snap
---
source: crates/mdt_cli/tests/snapshots.rs
expression: readme
---
# My Crate

<!-- {=crate_docs} -->

# My Crate

A powerful library for doing things.

## Features

- Fast and efficient
- Easy to use

<!-- {/crate_docs} -->
