crates/mdt_cli/tests/snapshots/snapshots__typescript_workspace_update_idempotent.snap
---
source: crates/mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmprHHEXu
    - update
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
All consumer blocks are already up to date.

----- stderr -----
