crates/mdt_cli/tests/snapshots/snapshots__typescript_workspace_update_readme_md.snap
---
source: crates/mdt_cli/tests/snapshots.rs
expression: readme
---
# My Lib

> A TypeScript library

## Installation

<!-- {=installGuide} -->

Install `my-lib` (v1.2.3):

```sh
npm install my-lib
```
<!-- {/installGuide} -->

## API

<!-- {=apiDocs} -->

A sample TypeScript library.

## Usage

```ts
import { createClient } from "my-lib";

const client = createClient();
```
<!-- {/apiDocs} -->
