crates/mdt_cli/tests/snapshots/snapshots__unknown_transformer_check_verbose.snap
---
source: crates/mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpddzV90
    - "--verbose"
    - check
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 2
----- stdout -----
Scanned project: 1 provider(s), 1 consumer(s)
  Providers:
    @docs ([TEMP_DIR]/template.t.md)

----- stderr -----
error: readme.md:3:1: unknown transformer `foobar`
error: validation errors found
